--- a/intro.tex
+++ b/intro.tex
@@ -11,6 +11,8 @@ Data analysis is an very robust topic in the field of data science and encompass
 This paper tries to enlist most of the up-to-date techniques used by researchers and mathematicians to make sense of the data. Also the paper presents them in three groups of analytics.
 But then there arises a question which is, why the need for data analytics ? Well, to answer that the paper proposes the literature from an article of Kdnuggets \shortcite{KDnuggets}.
 
+
+
 According to Paul following are use cases  of data analytics :
 1. Analytics powers our decisions – we do not need to guess while making bold new decisions, we should use the information from data at hand.
 2. Your data analysis weighs down your opponent's argument.
@@ -59,15 +61,34 @@ Figure \ref{fig:data-analytics} is a view of the data analytics with respect to 
 	\label{fig:data-analytics}
 \end{figure}
 
-\subparagraph{Why Analytics for financial institutions ?}
-Customers are loyal consumers of products, which give value for their monetary investments. Big institutions tend to over look the need for value creation and focus their analytics and metrics to improve profit \shortcite{Reichheld1996}. In the HBR report Reichheld makes certain  observations that customers of large companies witness degrading value standards and secondly increasing rate of customer churn is a good variable to predict cash flow from consumer to company. He also noted that companies can replace old customer with new ones but the profits are lower as cost of induction is high.
+\section{Why Analytics for financial institutions ?}
+According to a joint research study, by Boston Consulting Group and Morgan Stanley with analytics professionals, it was reveled that the financial institutions lagged behind other verticals in the use of data analytics~\shortcite{BCGanalytics2017} and it is shown in figure~\ref{fig:da_digitization}. One of the findings of the research was that FI's are investing a lot of capital, an estimated total of about \textdollar1bn. In addition it was found that for near term value creation the FI's expected data analytics to optimize customer acquisition, customer retention, operational efficiency, and risk mitigation.
+\newline
+\newline
+\begin{figure}[H]
+	\includegraphics[scale = 0.7]{figures/DA_used_verticals.png}
+	\caption{Reprinted from the Morgan Stanley Digitization Index ranks }
+	\label{fig:da_digitization}
+\end{figure}
 
+\section{State of analytics in financial companies}
+From the survey of FI's, a mix of interviewees representing payment companies, service providers, insurance, commercial banks, BCG made some interesting discoveries. It was found that most organizations have invested in analytics techniques to generate market perceptions. Some of the most used were those of social media, log, text and location analytics as shown in figure~\ref{fig:da_capabilities}.
+
+\begin{figure}[H]
+	\includegraphics[scale = 0.5]{figures/DA_capabilities.png}
+	\caption[Da capablities]{Reprinted from the work of Boston consulting group  }
+	\label{fig:da_capabilities}
+\end{figure}
+
+Researchers have highlighted that most of the interviewees claimed that institutions are yet to make substantial gain from investments in analytics. They identified that companies can make gains from automation and digitization of manual processes. Additionally, it was noted that financial institutions are adopting digital processes to automate data collection for KYC (Know Your Customer) service and Anti-money laundering 
+%\newline
+%\newline
+Customers are loyal consumers of products, which give value for their monetary investments. Big institutions tend to over look the need for value creation and focus their analytics and metrics to improve profit \shortcite{Reichheld1996}. In the HBR report Reichheld makes certain  observations that customers of large companies witness degrading value standards and secondly increasing rate of customer churn is a good variable to predict cash flow from consumer to company. He also noted that companies can replace old customer with new ones but the profits are lower as cost of induction is high.
 
 
 	
 
 2. Categories in data analytics :
-
 There are three basic categories viz. Descriptive, Predictive and Prescriptive. The methods and techniques are described further in the paper, and they are classified into the above.
 
 2.1 Descriptive Analytic techniques: The sole purpose of using the methods in this category would be to describe the Hypothesis. Descriptive analytics or data mining are at the bottom of the big data value chain, but they can be valuable for uncovering patterns that offer insight. A simple example of descriptive analytics would be assessing credit risk; using past financial performance to predict a customer’s likely financial performance. Descriptive analytics can be useful in the sales cycle, for example, to categorize customers by their likely product preferences and sales cycle.
