--- a/references.bib
+++ b/references.bib
@@ -2,12 +2,21 @@
 @misc{KDnuggets,
 	Title = {10 reasons why I love data and analytics | KDnuggets},
 	Author = {Balm, Paul},
-	howtopublished = "\url{http://www.kdnuggets.com/2015/06/10-reasons-love-data-analytics.html}"
+	howtopublished = "\url{http://www.kdnuggets.com/2015/06/10-reasons-love-data-analytics.html}",
 	Month = June,
 	Year = 2015,
 	note = {Accessed: 2017-05-10 }
 	}
 
+@misc{BCGanalytics2017,
+	Title = {The Journey from Insight to Value | Data Analytics for Financial Institutions},
+	Author = {Malhotra, Sunil and Hizir, Berk and Badi, Mohammed and Grealish, Alenka },
+	hottopublished = 
+"\url{https://www.bcg.com/publications/2017/technology-digital-transformation-data-analytics-financial-institutions.aspx}",
+	Month = May,
+	Year = 2017,
+	note = {Accessed: 2017-06-17}
+}
 
 @misc{Reuters,
 	Title = {India's Reliance Jio signs up 72 million paying customers | Reuters},
@@ -26,5 +35,4 @@
 		Year = 1996,
 		note = {Accessed: 2017-06-16}
 }
-
 
