--- a/thesis.tex
+++ b/thesis.tex
@@ -7,12 +7,13 @@
 
 
 \documentclass[12pt,a4paper]{aitthesis}
-%\documentclass[12pt]{article}
+%\documentclass[12pt,a4paper]{article}
 
 \usepackage{graphicx}
 \usepackage{latexsym}
 \usepackage{amssymb,amsthm,amsmath}
-\usepackage[notocbib]{apacite}
+%\usepackage[notocbib]{apacite}
+\usepackage{apacite}
 \usepackage{verbatim}
 \usepackage{multirow}
 \usepackage{bm}
@@ -57,7 +58,7 @@
 \newcommand\oldparms{\parms^{\text{old}}}
 
 
-\def\short{1}
+%\def\short{1}
 
 \begin{document}
 
