--- a/chapter2.tex
+++ b/chapter2.tex
@@ -12,7 +12,11 @@ There are several techniques employed by businesses to analyze and display data.
 	\item Performance dashboard and KPI's
 \end{enumerate}
 
-\FloatBarrier
+\section{Social media analytics}
+\section{Log analytics}
+\section{Text analytics}
+\section{Location analytics}
+
 
 
 %
@@ -32,7 +36,7 @@ Data mining techniques are used in credit card systems to detect fraud, in loan 
 
 
 There are many techniques to modeling predictive analytics 
-\FloatBarrier
+
 
 \begin{enumerate}
 	\item 
@@ -45,7 +49,17 @@ There are many techniques to modeling predictive analytics
 %
 %
 %
+\section{Geo fencing}
 
+\section{Artificial intelligence}
+
+\section{Deep learning}
+
+\section{Voice analytics}
+
+\section{Image recognition}
+
+\section{Video analytics}
 
 \setlength{\footskip}{8mm}
 
@@ -53,7 +67,7 @@ There are many techniques to modeling predictive analytics
 \label{prescriptive-techniques}
 
 
-\FloatBarrier
+
 
 
 %
@@ -67,7 +81,7 @@ There are many techniques to modeling predictive analytics
 \label{optimization-techniques}
 
 
-\FloatBarrier
+
 
 
 %
@@ -81,7 +95,7 @@ There are many techniques to modeling predictive analytics
 \label{visualization-techniques}
 
 
-\FloatBarrier
+
 
 
 %
@@ -90,10 +104,4 @@ There are many techniques to modeling predictive analytics
 %
 
 \setlength{\footskip}{8mm}
-
-\chapter{Feature Selection Techniques} 
-\label{feature-selection-techniques}
-
-
-\FloatBarrier
 
