--- a/intro.tex
+++ b/intro.tex
@@ -60,6 +60,7 @@ Figure \ref{fig:data-analytics} is a view of the data analytics with respect to 
 	\caption{Data Analytics}
 	\label{fig:data-analytics}
 \end{figure}
+\FloatBarrier
 
 \section{Why Analytics for financial institutions ?}
 According to a joint research study, by Boston Consulting Group and Morgan Stanley with analytics professionals, it was reveled that the financial institutions lagged behind other verticals in the use of data analytics~\shortcite{BCGanalytics2017} and it is shown in figure~\ref{fig:da_digitization}. One of the findings of the research was that FI's are investing a lot of capital, an estimated total of about \textdollar1bn. In addition it was found that for near term value creation the FI's expected data analytics to optimize customer acquisition, customer retention, operational efficiency, and risk mitigation.
@@ -70,6 +71,7 @@ According to a joint research study, by Boston Consulting Group and Morgan Stanl
 	\caption{Reprinted from the Morgan Stanley Digitization Index ranks }
 	\label{fig:da_digitization}
 \end{figure}
+\FloatBarrier
 
 \section{State of analytics in financial companies}
 From the survey of FI's, a mix of interviewees representing payment companies, service providers, insurance, commercial banks, BCG made some interesting discoveries. It was found that most organizations have invested in analytics techniques to generate market perceptions. Some of the most used were those of social media, log, text and location analytics as shown in figure~\ref{fig:da_capabilities}.
@@ -79,6 +81,7 @@ From the survey of FI's, a mix of interviewees representing payment companies, s
 	\caption[Da capablities]{Reprinted from the work of Boston consulting group  }
 	\label{fig:da_capabilities}
 \end{figure}
+\FloatBarrier
 
 Researchers have highlighted that most of the interviewees claimed that institutions are yet to make substantial gain from investments in analytics. They identified that companies can make gains from automation and digitization of manual processes. Additionally, it was noted that financial institutions are adopting digital processes to automate data collection for KYC (Know Your Customer) service and Anti-money laundering 
 %\newline
