--- a/references.bib
+++ b/references.bib
@@ -36,3 +36,11 @@
 		note = {Accessed: 2017-06-16}
 }
 
+@misc{PwcAI2017,
+	Title = {Artificial intelligence in financial services | From PwC's Financial Services Institute},
+	Author = {PWC},
+	howpublished = "\url{https://www.pwc.com/us/en/financial-services/research-institute/artificial-intelligence.html}",
+	Month = March,
+	Year = 1996,
+	note = {Accessed: 2017-06-16}
+}
