--- a/chapter2.tex
+++ b/chapter2.tex
@@ -2,6 +2,13 @@
 
 \chapter{Descriptive Techniques} 
 \label{ch:literature-review}
+
+The sole purpose of using the methods in this category would be to describe the Hypothesis. Descriptive analytics or data mining are at the bottom of the big data value chain, but they can be valuable for uncovering patterns that offer insight. A simple example of descriptive analytics would be assessing credit risk; using past financial performance to predict a customer’s likely financial performance. Descriptive analytics can be useful in the sales cycle, for example, to categorize customers by their likely product preferences and sales cycle.
+
+To summarize data into meaningful charts and reports, for example, about budgets, sales, revenues, or cost. They allow managers to obtain standard and customized reports, and drill down into the data and to make queries to understand the impact of an advertising campaign, for example, review business performance to find problems or areas of opportunity, and identify patterns and trends in data. Typical questions that descriptive analytics help answer are: How much did we sell in each region? What was our revenue and profit last quarter? How many and what types of complaints did we resolve? Which factory has the lowest productivity? Descriptive analytics also help companies to classify customers into different segments, which enable them to develop specific marketing campaigns and advertising strategies. [1]
+
+There are two main approaches to apply in this topic Data warehousing and Visual analytics with reporting.
+
 Descriptive analytics is very common and basic form of data mining technique to derive meaning and trend from data. Almost all of the companies in financial sector utilize the tools based on these techniques. The techniques in this are relatively basic compared with those of predictive models and prescriptive models. Institutions generally use tools which can generate reports regularly, some are printed monthly while some others are generated  as a yearly routine. Such demands for reports describe the status quo of the balance sheets, organizational debts and cash flows. Daly transactions and updates of balances are maintained in the books or accounts and reports are generated daily for accountants and auditors. Thus it is imperative that vital functions of reporting, updating and auditing are functionalities of some business analytics.
 
 There are several techniques employed by businesses to analyze and display data. They are as follows:
@@ -28,6 +35,10 @@ There are several techniques employed by businesses to analyze and display data.
 
 \chapter{Predictive Techniques} 
 \label{predictive-techniques}
+
+Predictive analytics use big data to identify past patterns to predict the future. For example, some companies are using predictive analytics for sales lead scoring. Some companies have gone one step further use predictive analytics for the entire sales process, analyzing lead source, number of communications, types of communications, social media, documents, CRM data, etc. Properly tuned predictive analytics can be used to support sales, marketing, or for other types of complex forecasts.
+
+
 The basis of Predictive modeling is the use of data mining techniques to forecast future results. Data mining is the process of sorting data to find patterns or infer relationships.
 Thus a formulation of a statistical model with relevant variables is essential for prediction. 
 ref from site (http://searchdatamanagement.techtarget.com/definition/predictive-modeling) and (http://searchsqlserver.techtarget.com/definition/data-mining)
@@ -52,7 +63,8 @@ There are many techniques to modeling predictive analytics
 \section{Geo fencing}
 
 \section{Artificial intelligence}
-
+AI was developed a long time ago, but it has for recent years gained much traction and entered our lives. AI was already present in 
+According to an article by PwC~\shortcite{PwcAI2017} 
 \section{Deep learning}
 
 \section{Voice analytics}
@@ -66,6 +78,7 @@ There are many techniques to modeling predictive analytics
 \chapter{Prescriptive Techniques} 
 \label{prescriptive-techniques}
 
+Prescriptive analytics is really valuable, but largely not used. According to Gartner, 13 percent of organizations are using predictive but only 3 percent are using prescriptive analytics. Where big data analytics in general sheds light on a subject, prescriptive analytics gives you a laser-like focus to answer specific questions. For example, in the healthcare industry, you can better manage the patient population by using prescriptive analytics to measure the number of patients who are clinically obese, then add filters for factors like diabetes and LDL cholesterol levels to determine where to focus treatment. The same prescriptive model can be applied to almost any industry target group or problem.
 
 
 
