--- a/intro.tex
+++ b/intro.tex
@@ -62,6 +62,7 @@ Figure \ref{fig:data-analytics} is a view of the data analytics with respect to 
 \end{figure}
 \FloatBarrier
 
+\newpage
 \section{Why Analytics for financial institutions ?}
 According to a joint research study, by Boston Consulting Group and Morgan Stanley with analytics professionals, it was reveled that the financial institutions lagged behind other verticals in the use of data analytics~\shortcite{BCGanalytics2017} and it is shown in figure~\ref{fig:da_digitization}. One of the findings of the research was that FI's are investing a lot of capital, an estimated total of about \textdollar1bn. In addition it was found that for near term value creation the FI's expected data analytics to optimize customer acquisition, customer retention, operational efficiency, and risk mitigation.
 \newline
@@ -73,6 +74,7 @@ According to a joint research study, by Boston Consulting Group and Morgan Stanl
 \end{figure}
 \FloatBarrier
 
+\newpage
 \section{State of analytics in financial companies}
 From the survey of FI's, a mix of interviewees representing payment companies, service providers, insurance, commercial banks, BCG made some interesting discoveries. It was found that most organizations have invested in analytics techniques to generate market perceptions. Some of the most used were those of social media, log, text and location analytics as shown in figure~\ref{fig:da_capabilities}.
 
@@ -91,45 +93,9 @@ Customers are loyal consumers of products, which give value for their monetary i
 
 	
 
-2. Categories in data analytics :
-There are three basic categories viz. Descriptive, Predictive and Prescriptive. The methods and techniques are described further in the paper, and they are classified into the above.
-
-2.1 Descriptive Analytic techniques: The sole purpose of using the methods in this category would be to describe the Hypothesis. Descriptive analytics or data mining are at the bottom of the big data value chain, but they can be valuable for uncovering patterns that offer insight. A simple example of descriptive analytics would be assessing credit risk; using past financial performance to predict a customer’s likely financial performance. Descriptive analytics can be useful in the sales cycle, for example, to categorize customers by their likely product preferences and sales cycle.
-
-To summarize data into meaningful charts and reports, for example, about budgets, sales, revenues, or cost. They allow managers to obtain standard and customized reports, and drill down into the data and to make queries to understand the impact of an advertising campaign, for example, review business performance to find problems or areas of opportunity, and identify patterns and trends in data. Typical questions that descriptive analytics help answer are: How much did we sell in each region? What was our revenue and profit last quarter? How many and what types of complaints did we resolve? Which factory has the lowest productivity? Descriptive analytics also help companies to classify customers into different segments, which enable them to develop specific marketing campaigns and advertising strategies. [1]
-
-There are two main approaches to apply in this topic Data warehousing and Visual analytics with reporting.
-
-2.2 Predictive analytic techniques : Predictive analytics use big data to identify past patterns to predict the future. For example, some companies are using predictive analytics for sales lead scoring. Some companies have gone one step further use predictive analytics for the entire sales process, analyzing lead source, number of communications, types of communications, social media, documents, CRM data, etc. Properly tuned predictive analytics can be used to support sales, marketing, or for other types of complex forecasts.
 
 
-2.3 Prescriptive analytic techniques : Prescriptive analytics is really valuable, but largely not used. According to Gartner, 13 percent of organizations are using predictive but only 3 percent are using prescriptive analytics. Where big data analytics in general sheds light on a subject, prescriptive analytics gives you a laser-like focus to answer specific questions. For example, in the healthcare industry, you can better manage the patient population by using prescriptive analytics to measure the number of patients who are clinically obese, then add filters for factors like diabetes and LDL cholesterol levels to determine where to focus treatment. The same prescriptive model can be applied to almost any industry target group or problem.
-
-
-There is yet another classification of Analytics tools on the basis of the generation ie. Traditional vs Advanced.[1] [1 - https://rapidminer.com/summarizing-differences-business-intelligence-advanced-analytics/]
-
-Traditional analytics employ visualizations like graphs, charts (pie, bar), infographics etc., querying, reporting, scorecards and OLAP. They tend to answer the Descriptive analytics type of questions. Generally used in Business Intelligence softwares, just query from existing data and display intuitive infographics, the user deciphers the data. The process of the business intelligence is generally termed as reactive.
-Tools in consumer market WebFOCUS InfoAssist OLAP, IBM Cognos, Netweaver, Microstrategy Intelligence Server, andara Balanced Scorecard, BSC designer and any SQL relational database like Oracle, Microsoft Sql Server.
-1. OLAP
-2.Dashboards
-3. Scorecards
-4. KPI’s
-
-Advanced analytics, on the other hand go beyond the traditional techniques. They use modeling, optimization, statistics methods to discover the future and predict an outcome. The softwares may also be termed as decision support systems or expert systems as they generate possible deductions. User could use the help and substantiate their own judgments. The process in this category is termed as proactive.
-Methods used in advanced analytics are: predictive modeling, Statistical analysis, Simulation and Optimization, Text mining, Data mining, Multimedia mining, Descriptive modeling.
-Tools in the consumer market are Powerpivot, Tableau, Qliksense, Yellowfin, etc.
-1. Statistical Methods
-2. Text Mining
-3. Data Mining
-4. Multimedia mining
-5. Simulation
-6. Optimization
-
-
-3. Fields and Domains of application :
-
-
-
+\newpage
 \section{Objectives}
 
 The overall objective of the study report is to understand the major methods, techniques and tools adopted by financial institutions to perform data analytics.
