--- a/intro.tex
+++ b/intro.tex
@@ -2,6 +2,10 @@
 
 \chapter{Introduction}
 
+\section{Objectives}
+
+The overall objective of the study report is to build an understanding of the tools and techniques of analytics used by financial analysts and institutions. This study presents a brief of the current state of affairs analytics and subsequently a study of the techniques. Also there is a demonstration of some of the common methods.
+
 
 \section{Overview}
 
@@ -90,27 +94,3 @@ Researchers have highlighted that most of the interviewees claimed that institut
 %\newline
 Customers are loyal consumers of products, which give value for their monetary investments. Big institutions tend to over look the need for value creation and focus their analytics and metrics to improve profit \shortcite{Reichheld1996}. In the HBR report Reichheld makes certain  observations that customers of large companies witness degrading value standards and secondly increasing rate of customer churn is a good variable to predict cash flow from consumer to company. He also noted that companies can replace old customer with new ones but the profits are lower as cost of induction is high.
 
-
-	
-
-
-
-\newpage
-\section{Objectives}
-
-The overall objective of the study report is to understand the major methods, techniques and tools adopted by financial institutions to perform data analytics.
-
-
-
-%\section{Thesis Outline}
-
-%The organization of this dissertation is as follows:
-%\begin{itemize}
-%	\item In Chapter \ref{ch:literature-review}, the literature review is explored.
-%	\item In Chapter \ref{ch:methodology}, the methodology is proposed.
-%\end{itemize}
-
-%In Chapter \ref{ch:results}, I present the experimental results.
-%Finally, in Chapter \ref{ch:conclusion}, I conclude my thesis.
-
-\FloatBarrier
