--- a/chapter2.tex
+++ b/chapter2.tex
@@ -63,8 +63,12 @@ There are many techniques to modeling predictive analytics
 \section{Geo fencing}
 
 \section{Artificial intelligence}
-AI was developed a long time ago, but it has for recent years gained much traction and entered our lives. AI was already present in 
-According to an article by PwC~\shortcite{PwcAI2017} 
+AI was developed a long time ago, but it has for recent years gained much traction and entered our lives. AI was present from the 1950's, but it has only gained popularity.
+According to an article by PwC~\shortcite{PwcAI2017}, some companies have invested in AI, Machine and Cognitive learning tools and have implemented solutions for Chatbots, Personal assistants etc. Big data coupled with faster computing and ubiquitous implementation with cloud computing has certainly boosted research and development.
+
+
+
+
 \section{Deep learning}
 
 \section{Voice analytics}
