--- a/intro.tex
+++ b/intro.tex
@@ -4,7 +4,7 @@
 
 \section{Objectives}
 
-The overall objective of the study report is to build an understanding of the tools and techniques of analytics used by financial analysts and institutions. This study presents a brief of the current state of affairs analytics and subsequently a study of the techniques. Also there is a demonstration of some of the common methods.
+The overall objective of the study report is to build an understanding of the tools and techniques of analytics used by financial analysts and institutions. This study presents a brief of the current state of affairs analytics and subsequently a study of the techniques. Also there is a demonstration of some common methods.
 
 
 \section{Overview}
