--- a/chapter2.tex
+++ b/chapter2.tex
@@ -65,8 +65,7 @@ There are many techniques to modeling predictive analytics
 \section{Artificial intelligence}
 AI was developed a long time ago, but it has for recent years gained much traction and entered our lives. AI was present from the 1950's, but it has only gained popularity.
 According to an article by PwC~\shortcite{PwcAI2017}, some companies have invested in AI, Machine and Cognitive learning tools and have implemented solutions for Chatbots, Personal assistants etc. Big data coupled with faster computing and ubiquitous implementation with cloud computing has certainly boosted research and development.
-
-
+As per a Forbes research projection, in the next 10 years, implementations of AI will increase economic growth by 100\% in about 20 countries. Also there could be an increase in productivity of around 40\% of banks financial labor~\shortcite{Forbes2017}.
 
 
 \section{Deep learning}
