--- a/intro.tex
+++ b/intro.tex
@@ -15,16 +15,20 @@ Data analysis is an very robust topic in the field of data science and encompass
 This paper tries to enlist most of the up-to-date techniques used by researchers and mathematicians to make sense of the data. Also the paper presents them in three groups of analytics.
 But then there arises a question which is, why the need for data analytics ? Well, to answer that the paper proposes the literature from an article of Kdnuggets \shortcite{KDnuggets}.
 
-
+Data analytics is already the next big disrupter in the financial sector~\shortcite{Forbes2017}. New startups are build solutions to automate mundane manual tasks of reconciliations and consolidations. Artificial intelligence is helping companies to redesign the traditional process flows and restructure work-flows for optimization. With complex algorithms of machine learning, artificial intelligence, ``Bot's`` are designed which learn the product usage and popularity among customers. These ``Bot's`` can also interact autonomously to users and deduce patterns of interaction.
+Such an exisiting example is cited in Cnbc's article~\shortcite{BOA2016}, about Bank of America deploying ``Erica`` an digital assistant based on models of artificial intelligence.
 
 According to Paul following are use cases  of data analytics :
-1. Analytics powers our decisions – we do not need to guess while making bold new decisions, we should use the information from data at hand.
-2. Your data analysis weighs down your opponent's argument.
-3. Cut down on loss making ventures with data analytics.
-4. Can be applied to all domains be it health-care, banking, marketing, sales, operations etc.
+\begin{enumerate}
+	\item Analytics powers our decisions – we do not need to guess while making bold new decisions, we should use the information from data at hand.
+	\item Your data analysis weighs down your opponent's argument.
+	\item Cut down on loss making ventures with data analytics.
+	\item Can be applied to all domains be it health-care, banking, marketing, sales, operations etc.
+\end{enumerate}
+
 On the scenario when describing Data analytics it is very important to put the focus on Hypothesis.
 
-Shown in the table \ref{tableDMusecase} is some business areas 
+Shown in the table~\ref{tableDMusecase} is some business areas 
 
 
 \begin{table}[H]
