--- a/references.bib
+++ b/references.bib
@@ -2,7 +2,7 @@
 @misc{KDnuggets,
 	Title = {10 reasons why I love data and analytics | KDnuggets},
 	Author = {Balm, Paul},
-	howtopublished = "\url{http://www.kdnuggets.com/2015/06/10-reasons-love-data-analytics.html}",
+	howpublished = "\url{http://www.kdnuggets.com/2015/06/10-reasons-love-data-analytics.html}",
 	Month = June,
 	Year = 2015,
 	note = {Accessed: 2017-05-10 }
@@ -11,8 +11,7 @@
 @misc{BCGanalytics2017,
 	Title = {The Journey from Insight to Value | Data Analytics for Financial Institutions},
 	Author = {Malhotra, Sunil and Hizir, Berk and Badi, Mohammed and Grealish, Alenka },
-	hottopublished = 
-"\url{https://www.bcg.com/publications/2017/technology-digital-transformation-data-analytics-financial-institutions.aspx}",
+	howpublished = "\url{https://www.bcg.com/publications/2017/technology-digital-transformation-data-analytics-financial-institutions.aspx}",
 	Month = May,
 	Year = 2017,
 	note = {Accessed: 2017-06-17}
@@ -44,3 +43,22 @@
 	Year = 1996,
 	note = {Accessed: 2017-06-16}
 }
+
+@misc{Forbes2017,
+	Title = {Artificial Intelligence Is Becoming A Major Disruptive Force In Banks' Finance Departments | Forbes},
+	Author = {Culp, Steve},
+	howpublished = "\url{https://www.forbes.com/sites/steveculp/2017/02/15/artificial-intelligence-is-becoming-a-major-disruptive-force-in-banks-finance-departments/#39f25de14f62}",
+	Month = Feb,
+	Year = 2017,
+	note = {Accessed: 2017-06-27}
+	}
+
+@misc{BOA2016,
+	Title = {Bank of America launches Chat bot Erica | CNBC},
+	Author = {Taylor, Harriet},
+	howpublished = "\url{http://www.cnbc.com/2016/10/24/bank-of-america-launches-ai-chatbot-erica--heres-what-it-does.html}",
+	Month = Oct,
+	Year = 2016,
+	note = {Accessed: 2017-06-27}
+}
+	
