done some more more more

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -61,6 +61,21 @@ There are many techniques to modeling predictive analytics
 %
 %
 \section{Geo fencing}
+Geo-fencing (or also known as Location Analytics) is the term for creating a location based analytics algorithm which can track customers in a certain area and deliver valuable marketing or services. The technology works based on geographic location services and tracks any potential clients with their mobile gps. 
+Geo fencing tools are software applications which reside on the 
+
+Use-cases for geofencing :
+\begin{itemize}
+	\item Manage a group of cargo vehicles
+	\item Detect and optimize harbor docking for port management of ships
+	\item Density flow of vehicles and management on roads or air space near airports.
+	\item Exhibition centers can manage the flow of attendees to optimally view all exhibits, ensuring all items on display can be viewed.
+	\item Shopping malls and shops can monitor the passage of people and optimize the display of commercials or products.
+\end{itemize}
+
+Geo fences are designed into the application which generally store the latitude and longitudes of the location to be monitored. When the user uses the app, it reads data from the gps module and keeps checking if the client has crossed any geo fence en-route. Now-a-days geo fencing.
+
+Google maps geo fencing is available via API's 
 
 \section{Artificial intelligence}
 AI was developed a long time ago, but it has for recent years gained much traction and entered our lives. AI was present from the 1950's, but it has only gained popularity.
@@ -71,11 +86,19 @@ As per a Forbes research projection, in the next 10 years, implementations of AI
 
 \section{Deep learning}
 
+
+
 \section{Voice analytics}
+
+
 
 \section{Image recognition}
 
+
+
 \section{Video analytics}
+
+
 
 \setlength{\footskip}{8mm}
 
