--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,5 +1,43 @@
 \setlength{\footskip}{8mm}
 
+\chapter{Analytics in financial institutions}
+
+\section{Why?}
+According to a joint research study, by Boston Consulting Group and Morgan Stanley with analytics professionals, it was reveled that the financial institutions lagged behind other verticals in the use of data analytics~\shortcite{BCGanalytics2017} and it is shown in figure~\ref{fig:da_digitization}. One of the findings of the research was that FI's are investing a lot of capital, an estimated total of about \textdollar1bn. In addition it was found that for near term value creation the FI's expected data analytics to optimize customer acquisition, customer retention, operational efficiency, and risk mitigation.
+\newline
+\newline
+\begin{figure}[H]
+	\includegraphics[scale = 0.7]{figures/DA_used_verticals.png}
+	\caption{Reprinted from the Morgan Stanley Digitization Index ranks }
+	\label{fig:da_digitization}
+\end{figure}
+\FloatBarrier
+
+\newpage
+\section{State of analytics in financial companies}
+From the survey of FI's, a mix of interviewees representing payment companies, service providers, insurance, commercial banks, BCG made some interesting discoveries. It was found that most organizations have invested in analytics techniques to generate market perceptions. Some of the most used were those of social media, log, text and location analytics as shown in figure~\ref{fig:da_capabilities}.
+
+\begin{figure}[H]
+	\includegraphics[scale = 0.5]{figures/DA_capabilities.png}
+	\caption[Da capablities]{Reprinted from the work of Boston consulting group  }
+	\label{fig:da_capabilities}
+\end{figure}
+\FloatBarrier
+
+Researchers have highlighted that most of the interviewees claimed that institutions are yet to make substantial gain from investments in analytics. They identified that companies can make gains from automation and digitization of manual processes. Additionally, it was noted that financial institutions are adopting digital processes to automate data collection for KYC (Know Your Customer) service and Anti-money laundering 
+%\newline
+%\newline
+Customers are loyal consumers of products, which give value for their monetary investments. Big institutions tend to over look the need for value creation and focus their analytics and metrics to improve profit \shortcite{Reichheld1996}. In the HBR report Reichheld makes certain  observations that customers of large companies witness degrading value standards and secondly increasing rate of customer churn is a good variable to predict cash flow from consumer to company. He also noted that companies can replace old customer with new ones but the profits are lower as cost of induction is high.
+
+\newpage
+\section{Challenges faced by analytics}
+For every new technology there are certain common challenges, such as those of acceptability and usability. Finding out the actual benefit or Return on investment for newer technologies and solutions such as those of digital assistants remains a mystery. There is no quantifiable or tangible benefit, but only a perception that it could revolutionize the method of banking and investing.
+Some hurdles, such as of vision, budget, and getting all members on board, are faced early in the life-cycle of adopting such bold complex projects. Institution leadership faces the tough task of decision making and if rests on them to perceive value at the end of project.
+Even after adopting analytics and tools, management faces challenges of educating shareholders, staff and customers to be literate enough to invest and interact with solutions for effective usage.
+
+
+
+
 \chapter{Descriptive Techniques} 
 \label{ch:literature-review}
 
@@ -77,16 +115,45 @@ Geo fences are designed into the application which generally store the latitude 
 
 Google maps geo fencing is available via API's 
 
+\newpage
 \section{Artificial intelligence}
 AI was developed a long time ago, but it has for recent years gained much traction and entered our lives. AI was present from the 1950's, but it has only gained popularity.
 According to an article by PwC~\shortcite{PwcAI2017}, some companies have invested in AI, Machine and Cognitive learning tools and have implemented solutions for Chatbots, Personal assistants etc. Big data coupled with faster computing and ubiquitous implementation with cloud computing has certainly boosted research and development.
 As per a Forbes research projection, in the next 10 years, implementations of AI will increase economic growth by 100\% in about 20 countries. Also there could be an increase in productivity of around 40\% of banks financial labor~\shortcite{Forbes2017}.
 
+AI is used as a technique to automate various categories of tasks such as following~\shortcite{rich1991artificial} :
+\begin{itemize}
+	\item Mundane tasks
+		\begin{itemize}
+			\item Perception via Vision and Speech
+			\item Natural language processing 
+			\item Robot control and common sense
+		\end{itemize}
+	\item Formal tasks
+	\begin{itemize}
+		\item Playing games such as chess, go, checkers etc
+		\item Solving mathematical problems of geometry, logic, calculus
+	\end{itemize}
+	\item Expert tasks
+	\begin{itemize}
+		\item Engineering design, fault finding, Manufacturing planning
+		\item Scientific analysis
+		\item Medical diagnosis
+		\item Financial analysis
+	\end{itemize}
+\end{itemize}
+
 
 
 \section{Deep learning}
+In the paper ref~\shortcite{heaton2016deep} the authors have presented a list of techniques which are being used to classify and predict financial domain problems ranging from :
+\begin{itemize}
+	\item securities pricing
+	\item portfolio design and entity selection
+	\item risk management
+\end{itemize}.
 
-
+Deep learning models are being used in financial product design by working with big data. These models produce better results than the traditional techniques of economics. 
 
 \section{Voice analytics}
 
@@ -105,7 +172,7 @@ As per a Forbes research projection, in the next 10 years, implementations of AI
 \chapter{Prescriptive Techniques} 
 \label{prescriptive-techniques}
 
-Prescriptive analytics is really valuable, but largely not used. According to Gartner, 13 percent of organizations are using predictive but only 3 percent are using prescriptive analytics. Where big data analytics in general sheds light on a subject, prescriptive analytics gives you a laser-like focus to answer specific questions. For example, in the healthcare industry, you can better manage the patient population by using prescriptive analytics to measure the number of patients who are clinically obese, then add filters for factors like diabetes and LDL cholesterol levels to determine where to focus treatment. The same prescriptive model can be applied to almost any industry target group or problem.
+Prescriptive analytics is really valuable, but largely not used. According to Gartner, 13 percent of organizations are using predictive but only 3 percent are using prescriptive analytics. Where big data analytics in general sheds light on a subject, prescriptive analytics gives you a laser-like focus to answer specific questions. For example, in the health-care industry, you can better manage the patient population by using prescriptive analytics to measure the number of patients who are clinically obese, then add filters for factors like diabetes and LDL cholesterol levels to determine where to focus treatment. The same prescriptive model can be applied to almost any industry target group or problem.
 
 
 
