--- a/references.bib
+++ b/references.bib
@@ -61,4 +61,17 @@
 	Year = 2016,
 	note = {Accessed: 2017-06-27}
 }
-	
+
+@article{rich1991artificial,
+	title={Artificial intelligence},
+	author={Rich, Elaine and Knight, Kevin},
+	journal={McGraw-Hill, New},
+	year={1991}
+}
+
+@article{heaton2016deep,
+	title={Deep learning in finance},
+	author={Heaton, JB and Polson, NG and Witte, JH},
+	journal={arXiv preprint arXiv:1602.06561},
+	year={2016}
+}
