--- a/chapter2.tex
+++ b/chapter2.tex
@@ -88,10 +88,10 @@ There are many techniques to modeling predictive analytics
 
 
 \begin{enumerate}
-	\item 
+	\item Clustering methods
 	\item Regession methods
-	\item 
-	\item 
+	\item Classification methods
+	\item Association rules
 \end{enumerate}e)
 
 %
@@ -168,6 +168,12 @@ Deep learning models are being used in financial product design by working with 
 
 
 \setlength{\footskip}{8mm}
+
+
+\newpage
+\section{Combating financial fraud}
+In a research~\shortcite{Chen2015} , the Alibaba company developed an analytics solution to tackle fraud in the company. Big data from the company was leveraged to study patterns of financial transactions, user behavior and network analysis to predict in real time with machine learning algorithm, predicting bad user`s and transactions. AntBuckler is a predictive analytics solution developed in-house to detect and prevent fraudulent transactions.
+
 
 \chapter{Prescriptive Techniques} 
 \label{prescriptive-techniques}
