--- a/references.bib
+++ b/references.bib
@@ -75,3 +75,19 @@
 	journal={arXiv preprint arXiv:1602.06561},
 	year={2016}
 }
+
+@article{Chen2015,
+	author = {Chen, Jidong and Tao, Ye and Wang, Haoran and Chen, Tao},
+	doi = {10.1016/j.jfds.2015.03.001},
+	issn = {24059188},
+	journal = {The Journal of Finance and Data Science},
+	mendeley-groups = {Study Report},
+	month = {dec},
+	number = {1},
+	pages = {1--10},
+	title = {{Big data based fraud risk management at Alibaba}},
+	url = {http://linkinghub.elsevier.com/retrieve/pii/S2405918815000021},
+	volume = {1},
+	year = {2015}
+}
+
