--- a/references.bib
+++ b/references.bib
@@ -91,3 +91,16 @@
 	year = {2015}
 }
 
+@article{Costea2014,
+	abstract = {In this article we apply a fuzzy logic technique, namely Fuzzy C-Means clustering, and artificial intelligence algorithms for evaluating comparatively the financial performance of non-banking financial institutions (NFIs) in Romania. The NFIs' performance dataset consists of indicators that define the capital adequacy, assets' quality and profitability performance dimensions. The class performance variable is obtained by applying on the performance dataset the Fuzzy C-Means algorithm and obtaining clusters with similar performance. We attach to each input dataset observation a performance class depending on which cluster contains the observation given the characterization and hierarchy of the clusters in “good”, “medium” and “poor” performance clusters. Finally, we apply artificial neural networks (ANNs) trained with genetic algorithms in order to find a function that maps the input performance space on the newly constructed performance class variable. The classification model obtained can be used by different beneficiaries (e.g.: the Supervision Department of National Bank of Romania) to classify new NFIs as having a “good” or “poor” performance so that the limited resources of the supervision authority to be better allocated.},
+	author = {Costea, Adrian},
+	doi = {10.1016/S2212-5671(14)00271-8},
+	issn = {22125671},
+	journal = {Procedia Economics and Finance},
+	mendeley-groups = {Study Report},
+	pages = {4--9},
+	title = {{Applying Fuzzy Logic and Machine Learning Techniques in Financial Performance Predictions}},
+	url = {http://linkinghub.elsevier.com/retrieve/pii/S2212567114002718},
+	volume = {10},
+	year = {2014}
+}
