--- a/chapter2.tex
+++ b/chapter2.tex
@@ -143,7 +143,8 @@ AI is used as a technique to automate various categories of tasks such as follow
 	\end{itemize}
 \end{itemize}
 
-
+In an example case presented by a researcher from Romania~\shortcite{Costea2014}, the techniques of artificial intelligence combined with fuzzy logic for classification.
+The case is applied to a scenario where the National Bank of Romania classifies NFI`s into ``good`` or ``poor`` depending on the periodic financial reporting. National Bank of Romania collects the financial reports from Non - Banking financial institutions and monitors the situation 
 
 \section{Deep learning}
 In the paper ref~\shortcite{heaton2016deep} the authors have presented a list of techniques which are being used to classify and predict financial domain problems ranging from :
