added AI paper a little more

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -143,8 +143,12 @@ AI is used as a technique to automate various categories of tasks such as follow
 	\end{itemize}
 \end{itemize}
 
+Some techniques which fall in the space of AI are Support vector machines, Heuristics, Neural networks, Markhov decision process, and NLP natural language processing.
+
 In an example case presented by a researcher from Romania~\shortcite{Costea2014}, the techniques of artificial intelligence combined with fuzzy logic for classification.
-The case is applied to a scenario where the National Bank of Romania classifies NFI`s into ``good`` or ``poor`` depending on the periodic financial reporting. National Bank of Romania collects the financial reports from Non - Banking financial institutions and monitors the situation 
+The case is applied to a scenario where the National Bank of Romania classifies NFI`s into ``good`` or ``poor`` depending on the periodic financial reporting. The Non - Banking financial institutions of Romania are regulated by governmental policy to send their financial reports to the NBR for scrutiny. NBR appoints their staff to manually screen the reports and classify for goodness or badness and then need to proceed for on site inspection.
+
+The artificial neural network 
 
 \section{Deep learning}
 In the paper ref~\shortcite{heaton2016deep} the authors have presented a list of techniques which are being used to classify and predict financial domain problems ranging from :
