--- a/chapter2.tex
+++ b/chapter2.tex
@@ -147,8 +147,10 @@ Some techniques which fall in the space of AI are Support vector machines, Heuri
 
 In an example case presented by a researcher from Romania~\shortcite{Costea2014}, the techniques of artificial intelligence combined with fuzzy logic for classification.
 The case is applied to a scenario where the National Bank of Romania classifies NFI`s into ``good`` or ``poor`` depending on the periodic financial reporting. The Non - Banking financial institutions of Romania are regulated by governmental policy to send their financial reports to the NBR for scrutiny. NBR appoints their staff to manually screen the reports and classify for goodness or badness and then need to proceed for on site inspection.
+The artificial neural network is built with genetic algorithm and trained to perform classification. The process involved introducing mutations to chromosomes of both the parents and offspring.
 
-The artificial neural network 
+The dataset is made of 990 records having 11 attributes grouped into 3 dimensions viz., Capital adequacy, assets` quality and profitability. The data ranged between 2007 to 2012. There were 68 non banking financial institutions. 4 clusters were chosen using the Fuzzy C Means algorithm. The ANN structure contained 8 neurons on the first hidden layer and 5 on the next. The accuracy rate achieved was around 92.32\% and validation accuracy around 91\% and testing accuracy about 89\%. Thus in this study the researcher was able to get high accuracy artificial neural network classification to classify the financial statements of non- banking institutions in Romania.
+
 
 \section{Deep learning}
 In the paper ref~\shortcite{heaton2016deep} the authors have presented a list of techniques which are being used to classify and predict financial domain problems ranging from :
