text analysis stock sentiment

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -59,7 +59,12 @@ There are several techniques employed by businesses to analyze and display data.
 
 \section{Social media analytics}
 \section{Log analytics}
+
 \section{Text analytics}
+In a paper titled ``When machines read the news``~\shortcite{gross2011machines}, the authors have used text mining to derive sentiment from company news about intra-day stock trading. 
+The data was sourced from Reuter`s NewsScope sentiment engine. It contains around 29,500 records of news headlines in the period of 1 year from the month of July 2007 to June 2008. Each news item has 3 attributes of sentiment, relevance and novelty. 40 stocks listed on the London stock exchange were selected for analysis. These are actively traded on the exchange and thus a dynamic market sentiment and frequent news coverage. These stocks cover about 70\% of the FTSE100 market capitalization. 
+
+
 \section{Location analytics}
 
 
