--- a/references.bib
+++ b/references.bib
@@ -104,3 +104,15 @@
 	volume = {10},
 	year = {2014}
 }
+
+
+@article{gross2011machines,
+	title={When machines read the news: Using automated text analytics to quantify high frequency news-implied market reactions},
+	author={Gro{\ss}-Klu{\ss}mann, Axel and Hautsch, Nikolaus},
+	journal={Journal of Empirical Finance},
+	volume={18},
+	number={2},
+	pages={321--340},
+	year={2011},
+	publisher={Elsevier}
+}
